--- a/src/app/composants/personnes-actives/personnes-actives.component.html
+++ b/src/app/composants/personnes-actives/personnes-actives.component.html
@@ -1,6 +1,6 @@
 <div id="divPersonnes">
   <h2>Personnes actives:</h2>
-  <div>
-    <a href="#">Bob</a>
+  <div *ngFor="let personne of personnes">
+    <a href="#">{{ personne.nom }} - {{ personne.prenom }}</a>
   </div>
 </div>
