--- a/src/app/composants/message/message.component.html
+++ b/src/app/composants/message/message.component.html
@@ -1,6 +1,6 @@
 <div>
   <fieldset>
-    <legend><a href="#"></a>Bob a écrit le 02/03/2023</legend>
-    <p>Salut</p>
+    <legend><a href="#"></a>{{ message.auteur.nom }} a écrit le {{ message.date }}</legend>
+    <p>{{ message.texte }}</p>
   </fieldset>
 </div>
